# mini-calc

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  requirements.txt
perf/: locustfile.py
reports/perf/: locust_stats.csv  locust_stats_history.csv
scripts/: locust_assert.py  run_locust.sh
src/mini_calc/: __init__.py  cli.py  core.py
tests/: test_core.py
